--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.daemon=false
 ## Environment Properties
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1,1.21)
-forge_version=47.0.19
+forge_version=47.0.35
 forge_version_range=[47,)
 loader_version_range=[47,)
 mapping_channel=official
@@ -14,7 +14,7 @@ mapping_version=1.20.1
 mod_id=better_berries
 mod_name=Better Berries
 mod_license=GNU General Purpose License v3 (GPLv3)
-mod_version=1.20.1-1.0.0
+mod_version=1.20.1-1.0.1
 mod_group_id=lemon_juice.better_berries
-mod_authors=Lemon_Juiced
+mod_authors=Lemon_Juiced & Scalar Team
 mod_description=Adds more berries to your world.
