--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.daemon=false
 ## Environment Properties
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1,1.21)
-forge_version=47.0.35
-forge_version_range=[47,)
+neo_version=47.1.25
+neo_version_range=[47,)
 loader_version_range=[47,)
 mapping_channel=official
 mapping_version=1.20.1
@@ -14,7 +14,8 @@ mapping_version=1.20.1
 mod_id=better_berries
 mod_name=Better Berries
 mod_license=GNU General Purpose License v3 (GPLv3)
-mod_version=1.20.1-1.0.2
+mod_version=1.20.1-1.0.3
 mod_group_id=lemon_juice.better_berries
 mod_authors=Lemon_Juiced & Scalar Team
 mod_description=Adds more berries to your world.
+pack_format_number=15
