--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ mapping_version=1.20.1
 ## Mod Properties
 mod_id=better_berries
 mod_name=Better Berries
-mod_license=GNU General Purpose License v3 (GPLv3)
-mod_version=1.20.1-1.0.4
+mod_license=GNU General Public License v3 (GPLv3)
+mod_version=1.20.1-1.0.5
 mod_group_id=lemon_juice.better_berries
 mod_authors=Lemon_Juiced & Scalar Team
 mod_description=Adds more berries to your world.
